--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Practice</title>
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
+    <link rel="stylesheet" href="./assets/output.css" />
   </head>
   <body
     class="max-w-xl mx-auto border-black min-h-dvh bg-gradient-to-b from-black via-sky-950 to-gray-800"
@@ -22,74 +23,169 @@
           >@Pedro Pascal</span
         >
 
-        <h1 class="text-3xl font-extrabold leading-tight">This is my header</h1>
+        <h1 class="text-3xl font-extrabold leading-tight mt-1 font-display">This is the way</h1>
       </div>
 
       <section class="flex gap-2 justify-center items-center mt-4">
         <a
-          class="bg-purple-100 p-2 w-12 h-12 flex items-center justify-center rounded-full hover:bg-purple-200 hover:scale-110 transition-transform duration-300"
+          class="p-2 size-12 sm:size-16 flex items-center justify-center rounded-full hover:scale-110 transition-transform duration-300 bg-purple-100 hover:bg-purple-200"
           href="https://www.twitch.tv/"
           target="_blank"
         >
-          <svg width="24" height="24">
+          <svg width="28" height="28">
             <use xlink:href="./assets/sprite.svg#twitch" />
           </svg>
         </a>
         <a
-          class="bg-black p-2 w-12 h-12 flex items-center justify-center rounded-full hover:bg-black hover:scale-110 transition-transform duration-300"
+          class="bg-black hover:bg-black p-2 size-12 sm:size-16 flex items-center justify-center rounded-full hover:scale-110 transition-transform duration-300"
           href="https://github.com/"
           target="_blank"
         >
-          <svg width="24" height="24">
+          <svg width="28" height="28">
             <use xlink:href="./assets/sprite.svg#github" />
           </svg>
         </a>
 
         <a
-          class="bg-white p-2 w-12 h-12 flex items-center justify-center rounded-full hover:bg-black hover:scale-110 transition-transform duration-300"
+          class="bg-white p-2 size-12 sm:size-16 flex items-center justify-center rounded-full hover:bg-black hover:scale-110 transition-transform duration-300"
           href="https://www.linkedin.com/"
           target="_blank"
         >
-          <svg width="24" height="24">
+          <svg width="28" height="28">
             <use xlink:href="./assets/sprite.svg#linkedin" />
           </svg>
         </a>
         <a
-          class="bg-gradient-to-tr from-yellow-400 via-pink-500 to-purple-600 p-2 w-12 h-12 flex items-center justify-center rounded-full hover:bg-black hover:scale-110 transition-transform duration-300"
+          class="bg-gradient-to-tr from-yellow-400 via-pink-500 to-purple-600 p-2 size-12 sm:size-16 flex items-center justify-center rounded-full hover:bg-black hover:scale-110 transition-transform duration-300"
           href="https://www.instagram.com/"
           target="_blank"
         >
-          <svg width="24" height="24">
+          <svg width="28" height="28">
             <use xlink:href="./assets/sprite.svg#instagram" />
           </svg>
         </a>
         <a
-          class="bg-black p-2 w-12 h-12 flex items-center justify-center rounded-full hover:bg-black hover:scale-110 transition-transform duration-300"
+          class="bg-black p-2 size-12 sm:size-16 flex items-center justify-center rounded-full hover:bg-black hover:scale-110 transition-transform duration-300"
           href="https://www.twitter.com/"
           target="_blank"
         >
-          <svg width="24" height="24">
+          <svg width="28" height="28">
             <use xlink:href="./assets/sprite.svg#x" />
           </svg>
         </a>
         <a
-          class="bg-purple-100 p-2 w-12 h-12 flex items-center justify-center rounded-full hover:bg-black hover:scale-110 transition-transform duration-300"
+          class="bg-purple-100 p-2 size-12 sm:size-16 flex items-center justify-center rounded-full hover:bg-black hover:scale-110 transition-transform duration-300"
           href="https://www.youtube.com/"
           target="_blank"
         >
-          <svg width="24" height="24">
+          <svg width="28" height="28">
             <use xlink:href="./assets/sprite.svg#youtube" />
           </svg>
         </a>
       </section>
+
+      <p
+        class="text-center text-primary-light mt-4 text-sm sm:text-base px-4 text-balance"
+      >
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae est sit
+        ipsam ab repellat aperiam libero quasi. Soluta perferendis, eligendi
+        nobis optio voluptatem officiis aliquam necessitatibus accusamus illo?
+        Doloremque, quibusdam!
+      </p>
+
+      <!-- bento -->
+      <main class="pt-4 px-4 pb-16">
+        <div class="grid grid-cols-3 grid-rows-2 gap-2 w-full">
+          <!-- React -->
+          <a
+            href="http://"
+            target="_blank"
+            class="relative rounded-3xl overflow-hidden col-span-2 p-7 min-h-[180px] bg-gradient-to-br from-cyan-900 via-cyan-700 to-cyan-500 border border-purple-900 flex items-start hover:scale-105 hover:contrast-125 transition-transform duration-300 group"
+          >
+            <span class="absolute bottom-2 left-2 font-bold text-2xl"
+              >React JS</span
+            >
+            <svg
+              class="absolute -right-4 -bottom-4 -rotate-6 size-28 group-hover:-rotate-45 group-hover:scale-125 transition-transform duration-300"
+              width="100"
+              height="100"
+            >
+              <use xlink:href="./assets/sprite.svg#react" />
+            </svg>
+            <span
+              class="absolute top-2 left-2 text-xs border rounded-xl px-2 py-0.5"
+              >React JS 2</span
+            >
+          </a>
+
+          <!-- Html -->
+          <a
+            href="http://"
+            target="_blank"
+            class="relative rounded-3xl overflow-hidden col-span-1 p-7 min-h-[180px] bg-gradient-to-br from-orange-900 via-orange-700 to-orange-500 border border-orange-900 flex items-start hover:scale-105 hover:contrast-125 transition-transform duration-300 group"
+          >
+            <span class="absolute bottom-2 left-2 font-bold text-2xl"
+              >HTML</span
+            >
+            <svg
+              class="absolute -right-4 -bottom-4 -rotate-6 size-28 group-hover:-rotate-45 group-hover:scale-125 transition-transform duration-300"
+              width="100"
+              height="100"
+            >
+              <use xlink:href="./assets/sprite.svg#html" />
+            </svg>
+            <span
+              class="absolute top-2 left-2 text-xs border rounded-xl px-2 py-0.5"
+              >HTML 5</span
+            >
+          </a>
+
+          <!-- css -->
+          <a
+            href="http://"
+            target="_blank"
+            class="relative rounded-3xl overflow-hidden col-span-1 p-7 min-h-[180px] bg-purple-900 border border-purple-900 flex items-start hover:scale-105 hover:contrast-125 transition-transform duration-300 group"
+          >
+            <span
+              class="absolute bottom-2 left-2 font-bold text-2xl text-purple-100"
+              >CSS</span
+            >
+            <svg
+              class="absolute -right-4 -bottom-4 -rotate-6 size-28 group-hover:-rotate-45 group-hover:scale-125 transition-transform duration-300"
+              width="100"
+              height="100"
+            >
+              <use xlink:href="./assets/sprite.svg#css"/>
+            </svg>
+            <span
+              class="absolute top-2 left-2 text-xs border rounded-xl px-2 py-0.5 text-purple-100"
+              >CSS 3</span
+            >
+          </a>
+
+          <!-- Node -->
+          <a
+            href="http://"
+            target="_blank"
+            class="relative rounded-3xl overflow-hidden col-span-2 p-7 min-h-[180px] bg-gradient-to-br from-green-900 via-green-700 to-green-500 border border-green-900 flex items-start hover:scale-105 hover:contrast-125 transition-transform duration-300 group"
+          >
+            <span class="absolute bottom-2 left-2 font-bold text-2xl"
+              >Node JS</span
+            >
+            <svg
+              class="absolute -right-4 -bottom-4 -rotate-6 size-28 group-hover:-rotate-45 group-hover:scale-125 transition-transform duration-300"
+              width="100"
+              height="100"
+            >
+              <use xlink:href="./assets/sprite.svg#node" />
+            </svg>
+            <span
+              class="absolute top-2 left-2 text-xs border rounded-xl px-2 py-0.5"
+              >Node JS 2</span
+            >
+          </a>
+        </div>
+      </main>
     </header>
-    <main class="text-white">
-      <h1>This is my main</h1>
-      <p>This is my paragraph</p>
-    </main>
-    <footer class="text-white">
-      <h1>This is my footer</h1>
-      <p>This is my paragraph</p>
-    </footer>
   </body>
 </html>
